# batetron

 batetron/: Makefile.in  Makefile.win  Proyecto1.dev  Proyecto1.layout  bateria.cpp  bateria.h  cuerpo.cpp  cuerpo.h  sdljoy.c
 batetron/MingW/: stderr.txt
 batetron/Output/MingW/: stderr.txt
 batetron/src/: Cuerpo.cpp  Main.cpp
trunk/ batetron/: Batetron.dev  Batetron.layout  Makefile  Makefile.am  Makefile.win  Proyecto1.dev  bateria.cpp  bateria.h  cuerpo.cpp  cuerpo.h  main.cpp
trunk/ batetron/Output/MingW/: stderr.txt
trunk/ batetron/src/: Bateria.cpp  Bateria.h  Main.cpp
