####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = sdl_wingman

## INCLUDES were found outside kdevelop specific part

sdl_wingman_SOURCES = sdljoy.c loadimage.c 
sdl_wingman_LDADD   = -lSDL -lpthread -lSDL_image


EXTRA_DIST = arrowed.png bullseye.png loadimage.c loadimage.h sdljoy.c wingman.png 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
sdl_wingman_LDFLAGS = $(all_libraries) 
                                                                                
